--- a/src/layouts/partials/footer.html
+++ b/src/layouts/partials/footer.html
@@ -1,4 +1,31 @@
-{{ if .IsHome }}
-<p style="text-align: center;">blog subscription via <a href="{{ .Site.BaseURL }}feed.xml">rss</a></p>
+{{ if .Site.Params.socialLinks }}
+<p style="text-align: center;">
+  {{ range $index, $link := .Site.Params.socialLinks }}
+  {{ if gt $index 0 }}<span style="margin: 0 6px;"></span>{{ end }}
+  <a href="{{ $link.url }}" {{ if ne $link.name "RSS" }}target="_blank" rel="noopener"{{ end }} aria-label="{{ $link.name }}">
+    {{ if eq $link.name "GitHub" }}
+    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
+    </svg>
+    {{ else if eq $link.name "LinkedIn" }}
+    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
+      <rect x="2" y="9" width="4" height="12"></rect>
+      <circle cx="4" cy="4" r="2"></circle>
+    </svg>
+    {{ else if eq $link.name "RSS" }}
+    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M4 11a9 9 0 0 1 9 9"></path>
+      <path d="M4 4a16 16 0 0 1 16 16"></path>
+      <circle cx="5" cy="19" r="1"></circle>
+    </svg>
+    {{ else if eq $link.name "InfoQ" }}
+    <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+      <path d="M19.931 8.321q-.672 0-1.23.191a3.03 3.03 0 0 0-1.835 1.728q-.28.676-.28 1.533q.002 1.228.564 2.07l.007.01l.056.08l.023.032a3 3 0 0 0 .143.18l.018.02a2.95 2.95 0 0 0 1.32.87a3.8 3.8 0 0 0 1.215.18q.495 0 .94-.105a3.2 3.2 0 0 0 .81-.306a2.6 2.6 0 0 0 1.037.7q.364.133.786.175L24 14.504a2.6 2.6 0 0 1-.552-.122a2.3 2.3 0 0 1-.796-.465a3 3 0 0 0 .278-.454a3 3 0 0 0 .228-.633l.002-.006a4.5 4.5 0 0 0 .116-1.051q0-1.566-.915-2.51q-.915-.942-2.43-.942M0 8.471v6.584h1.62V8.472Zm9.88 0q-.863 0-1.241.344q-.38.345-.38 1.122a3 3 0 0 0 .02.342h-.753v.897h.752v3.879h1.48v-3.879h.92v-.897h-.92v-.187q0-.3.132-.4q.13-.1.54-.1h.248V8.567a3.4 3.4 0 0 0-.797-.095zm10.051 1.23q.782 0 1.226.548q.443.549.443 1.524q-.001.415-.083.753a2 2 0 0 1-.051.184l-.013.04a2 2 0 0 1-.056.142l-.027.06a2 2 0 0 1-.097.178l-.026.04a1.5 1.5 0 0 1-.322.353l-.008.006l-.008.005a1.4 1.4 0 0 1-.27.162q-.005 0-.008.003a1.5 1.5 0 0 1-.323.101h-.005l-.003.001a2 2 0 0 1-.369.034q-.782 0-1.225-.549a2 2 0 0 1-.102-.141l-.002-.002q-.046-.074-.087-.152l-.002-.004a2 2 0 0 1-.074-.163l-.012-.034a2.9 2.9 0 0 1-.164-1.017q0-.966.446-1.519q.445-.553 1.222-.553m-6.577.3q-1.186 0-1.915.72q-.728.72-.728 1.889q.001.107.008.21v.002a3 3 0 0 0 .024.239l.002.016q.015.105.036.206l.012.052a3 3 0 0 0 .126.395l.032.072q.03.069.066.135l.05.089l.068.109q.042.06.088.12l.05.066a2.4 2.4 0 0 0 1.253.793q.128.033.26.055h.001q.27.045.567.045q1.19 0 1.92-.717a2 2 0 0 0 .163-.176v-.002q.053-.064.098-.13q.025-.03.047-.063q.047-.07.088-.146l.034-.058q.046-.086.084-.178l.015-.035a2 2 0 0 0 .075-.21l.004-.012v-.003a2.7 2.7 0 0 0 .099-.49a3 3 0 0 0 .02-.262v-.003l.004-.12q0-1.173-.726-1.89c-.726-.717-1.126-.717-1.925-.717zm-7.74.046q-.447 0-.807.14a1.9 1.9 0 0 0-.645.429v-.455h-1.48v4.894h1.48v-2.882q0-.528.19-.744t.635-.216q.378 0 .553.232q.175.231.175.728v2.882h1.48V12.1q0-1.042-.39-1.548q-.39-.505-1.19-.505zm7.74 1.102a.99.99 0 0 1 .825.396q.307.396.307 1.065q0 .082-.004.16v.002q-.005.069-.013.134v.003l-.013.083l-.009.054l-.015.068a2 2 0 0 1-.075.242a1.4 1.4 0 0 1-.092.184l-.02.035a1 1 0 0 1-.068.096a.99.99 0 0 1-.823.396a.99.99 0 0 1-.822-.394a1 1 0 0 1-.065-.093l-.027-.045a1.3 1.3 0 0 1-.107-.232l-.012-.034l-.026-.088l-.002-.007a2 2 0 0 1-.06-.364a3 3 0 0 1-.008-.2q0-.66.31-1.06a.98.98 0 0 1 .819-.401"/>
+    </svg>
+    {{ end }}
+  </a>
+  {{ end }}
+</p>
 {{ end }}
 {{ if not (.Param "hideMadeWithLine") }}Made with <a href="https://github.com/janraasch/hugo-bearblog/">Hugo ʕ•ᴥ•ʔ Bear</a>{{ end }}
