--- a/src/layouts/partials/footer.html
+++ b/src/layouts/partials/footer.html
@@ -28,4 +28,4 @@
   {{ end }}
 </p>
 {{ end }}
-{{ if not (.Param "hideMadeWithLine") }}Made with <a href="https://github.com/janraasch/hugo-bearblog/">Hugo ʕ•ᴥ•ʔ Bear</a>{{ end }}
+{{ if not (.Param "hideMadeWithLine") }}Made with <a href="https://github.com/janraasch/hugo-bearblog/">Hugo ʕ•ᴥ•ʔ Bear</a>{{ end }} • Icons by <a href="https://icons8.com">Icons8</a>
